--- a/app/views/layouts/_navbar.slim
+++ b/app/views/layouts/_navbar.slim
@@ -1,5 +1,5 @@
 header
-  nav.navbar.navbar-expand-lg.navbar-dark.mt-3
+  nav.navbar.navbar-expand-lg.navbar-dark.mt-3.position-absolute.w-100
     .container
       a.fa-lg.navbar-brand class=(controller_name == 'home' ? 'text-warning font-weight-bold' : '') href=root_path  AOKA
       button.navbar-toggler aria-controls="navbarNavDropdown" aria-expanded="false" aria-label=("Toggle navigation") data-target="#navbarNavDropdown" data-toggle="collapse" type="button"
