--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,6 +19,7 @@ html
     link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet"
     link href="https://fonts.googleapis.com/css?family=Athiti|Courgette|Merriweather|Ubuntu&display=swap" rel="stylesheet"
     link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"
+    link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Rubik&display=swap" rel="stylesheet"
     script crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     script crossorigin="anonymous" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     script crossorigin="anonymous" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
@@ -26,7 +27,7 @@ html
   body
     = render 'layouts/navbar'
     = yield
-    / = render 'layouts/footer'
+/ = render 'layouts/footer'
 
 javascript:
     new WOW().init();
