--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -27,7 +27,7 @@ html
   body
     = render 'layouts/navbar'
     = yield
-/ = render 'layouts/footer'
+    = render 'layouts/footer'
 
 javascript:
     new WOW().init();
