--- a/app/views/layouts/_footer.slim
+++ b/app/views/layouts/_footer.slim
@@ -2,7 +2,9 @@ footer
   .container.padding40top
     .row
       .col-3
-        p.mithoo-cha-title Mithoo Cha
+        p
+          span.mithoo-cha-title Mithoo Cha
+          span.text-white.ml-2 &copy
         p.mithoo-cha-content Your Place, Your Time. Fastest home delivery service in Nepal
         .col-12.p-0.mt-5
           .row
@@ -76,7 +78,7 @@ css:
     list-style: none;
   }
 
-  .copyright{
+  .copyright {
     font-family: Rubik;
     font-size: 14px;
     color: white;
