Blog index and show completed

--- a/app/views/layouts/_navbar.slim
+++ b/app/views/layouts/_navbar.slim
@@ -11,7 +11,7 @@ header
           li.nav-item.ml-2
             a.nav-link.text-dark.mr-5.p-0.mt-2 class=(controller_name == "menus" ? "active" : "") href=menus_path Our Menu
           li.nav-item.ml-2
-            a.nav-link.text-dark.mr-5.p-0.mt-2 href="#" Blog
+            a.nav-link.text-dark.mr-4 href= "#{blogs_path}" Blog
           li.nav-item.ml-2
             a.nav-link.get-app href="#" Get the app
 
