--- a/app/views/layouts/_navbar.slim
+++ b/app/views/layouts/_navbar.slim
@@ -11,7 +11,7 @@ header
           li.nav-item.ml-2
             a.nav-link.text-dark.mr-5.p-0.mt-2 class=(controller_name == "menus" ? "active" : "") href=menus_path Our Menu
           li.nav-item.ml-2
-            a.nav-link.text-dark.mr-4 href= "#{blogs_path}" Blog
+            a.nav-link.text-dark.mr-5.p-0.mt-2 class=(controller_name == "blogs" ? "active" : "") href= blogs_path Blog
           li.nav-item.ml-2
             a.nav-link.get-app href="#" Get the app
 
@@ -30,11 +30,11 @@ css:
     color: #eee7e7 !important;
   }
 
-  .navbar .active{
+  .navbar .active {
     border-bottom: 3px solid #F1C512;
   }
 
-  header ul li a:hover{
+  header ul li a:hover {
     transition: 0.1s;
     border-bottom: 3px solid #F1C512;
   }
