added image format

--- a/app/views/blogs/index.html.slim
+++ b/app/views/blogs/index.html.slim
@@ -11,14 +11,14 @@ header
           .row
             .col-md-12
               .image-container-sm.m-3
-                = image_tag 'burger', class: 'w-100 image' do
+                = image_tag 'burger.png', class: 'w-100 image' do
                 .btn.btn-light.blog-duration.px-4
                   | 4 MIN READ
                 .blog-title
                   | Kathmandu a city of street delights
             .col-md-12
               .image-container.m-3
-                = image_tag 'blog-3', class: 'w-100 image'
+                = image_tag 'blog-3.png', class: 'w-100 image'
                 .btn.btn-light.blog-duration
                   | 4 MIN READ
                 .blog-title
@@ -27,14 +27,14 @@ header
           .row
             .col-md-12
               .image-container.m-3
-                = image_tag 'blog-2', class: 'w-100 image'
+                = image_tag 'blog-2.png', class: 'w-100 image'
                 .btn.btn-light.blog-duration
                   | 4 MIN READ
                 .blog-title
                   | Kathmandu a city of street delights
             .col-md-12
               .image-container-sm.m-3
-                = image_tag 'blog-4', class: 'w-100 image'
+                = image_tag 'blog-4.png', class: 'w-100 image'
                 .btn.btn-light.blog-duration.px-4
                   | 4 MIN READ
                 .blog-title
