added image format

--- a/app/views/blogs/show.html.slim
+++ b/app/views/blogs/show.html.slim
@@ -1,7 +1,7 @@
 header
   .container.padding100top.padding100bottom
     div.image-container
-      = image_tag 'blog-2', class: 'w-100'
+      = image_tag 'blog-2.png', class: 'w-100'
       .btn.btn-light.blog-duration.px-4
         | 4 MIN READ
     .blog-title.text-center.margin50top.margin70bottom
